examples/fail/type_mismatch.uplp
-- test: error { "category": "Type.mismatch" }
1 + ()